--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "nodemon": "^3.1.7"
   },
   "scripts": {
-    "start": "nodemon ./notes-app-back-end/src/server.js",
-    "lint": "eslint ./",
-    "lint:fix": "eslint ./ --fix"
+  "start-prod": "NODE_ENV=production node ./src/server.js",
+  "start-dev": "nodemon ./src/server.js",
+  "lint": "eslint ./src",
+  "lint:fix": "eslint ./ --fix"
   },
   "keywords": [],
   "author": "",
